--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required (VERSION 3.29.0 FATAL_ERROR)
 
 project(BattleCity)
 
+set(CMAKE_CXX_STANDARD 23)
+
 add_executable(BattleCity src/main.cpp)
 
 add_subdirectory(external/glfw)
